force-app/main/default/objects/Configuration_Page__c/Configuration_Page__c.object-meta.xml
<CustomObject>
    <label>Configuration Page</label>
    <nameField>
        <label>Configuration Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>