force-app/main/default/objects/Configuration_Page__c/fields/Label_1__c.field-meta.xml
<CustomField>
    <fullName>Label_1__c</fullName>
    <label>Label 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>