force-app/main/default/objects/Configuration_Page__c/fields/Migration_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Migration Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>